2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1855/cpukit
	* Makefile.am, configure.ac, psx16/Makefile.am: Correct signal
	processing during pthread_join. We are supposed to unblock the thread
	waiting on a pthread_join(), dispatch the signal handler, account for
	it potentially overwriting errno, and then have the thread return to
	blocking within pthread_join().
	* psxeintr_join/.cvsignore, psxeintr_join/Makefile.am,
	psxeintr_join/init.c, psxeintr_join/psxeintr_join.doc,
	psxeintr_join/psxeintr_join.scn: New files.

2011-07-31	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1867/cpukit
	* Makefile.am, configure.ac, psx12/task.c, psxrwlock01/test.c: Correct
	implementation of pthread_exit() and pthread_join() to support the
	case where a thread is joinable but calls pthread_exit() before a
	thread has attempted to join.
	* psx16/.cvsignore, psx16/Makefile.am, psx16/init.c, psx16/psx16.doc,
	psx16/psx16.scn: New files.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxcleanup/psxcleanup.c, psxfatal_support/init.c,
	psxfatal_support/system.h: Convert to "bool".

2008-08-19	Tim FitzGeorge <tim.fitzgeorge@astrium.eads.net>

	PR 1296/cpukit.
	* psxtimer01/psxtimer.c, psxtimer01/psxtimer01.scn: POSIX timers use
	incorrect repeat interval. This patch fixes the following problems in
	the test.
	  (1) Adds test for value of it_interval.tv_nsec.
	  (2) Corrects test for absolute timer in past.
	  (3) Modifies test to use different initial and repeat periods.
	  (4) Updates psxtimer01.scn to match results.

2008-08-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1297/cpukit
	* psxrwlock01/psxrwlock01.scn, psxrwlock01/test.c: Fix NULL attribute
	pointer handling.

2008-08-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxsem01/init.c: Spacing.

2008-08-04	Tim FitzGeorge <tim.fitzgeorge@astrium.eads.net>

	PR 1293/tests
	* psx10/init.c: Make sure we do not let tv_nsec go to -1.

2008-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1291/cpukit